--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 Created by [40423152](https://github.com/40423152/2017springcd_hw)
 </small>
 
-[Blog](https://github.com/40423152/2017springcd_hw/blog/index.html)
+</p><a href="blog/index.html">Blog</a>
 
 [Vimeo 影片](https://vimeo.com/user46451216/videos)
 
