--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ Created by [40423152](https://github.com/40423152/2017springcd_hw)
     <script type="text/template">
 ## 四連桿實體版本
 
+自評分數:80
+
 <iframe src="https://player.vimeo.com/video/206266484" width="640" height="325" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/206266484">2017-03-02 00-32-32</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </script>
@@ -87,6 +89,8 @@ Created by [40423152](https://github.com/40423152/2017springcd_hw)
 <section data-markdown>
     <script type="text/template">
 ## 四連桿組合
+
+自評分數:80
 
 <iframe src="https://player.vimeo.com/video/206343950" width="640" height="343" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/206343950">2017-03-02 10-48-51</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
@@ -99,6 +103,8 @@ Created by [40423152](https://github.com/40423152/2017springcd_hw)
     <script type="text/template">
 ## 影片翻譯 14-4
 
+自評分數:80
+
 <iframe src="https://player.vimeo.com/video/207569345" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/207569345">20170309</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </script>
@@ -109,6 +115,8 @@ Created by [40423152](https://github.com/40423152/2017springcd_hw)
 <section data-markdown>
     <script type="text/template">
 ## fossil
+
+自評分數:75
 
 <iframe src="https://player.vimeo.com/video/209247673" width="640" height="192" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/209247673">2017-03-21_01-27-43</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
@@ -121,6 +129,8 @@ Created by [40423152](https://github.com/40423152/2017springcd_hw)
     <script type="text/template">
 ## 直升機
 
+自評分數:75
+
 <iframe src="https://player.vimeo.com/video/212965001" width="640" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/212965001">錄製_2017_04_13_02_29_05_3</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </script>
@@ -131,6 +141,8 @@ Created by [40423152](https://github.com/40423152/2017springcd_hw)
 <section data-markdown>
     <script type="text/template">
 ## 8bars
+
+自評分數:80
 
 <iframe src="https://player.vimeo.com/video/212952483" width="640" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/212952483">錄製_2017_04_12_22_49_21_902</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
